fix: body overflowing

--- a/website/src/assets/css/main.css
+++ b/website/src/assets/css/main.css
@@ -5,6 +5,7 @@ html, body {
 body {
   background: url(../images/bg.jpg) center / cover no-repeat;
   background-attachment: fixed;
+  overflow-x: hidden;
 }
 body::before {
   content: '';
